[package]
name = "inktyp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eframe = "0.27.2"
egui = "0.27.2"
egui_extras = { version = "0.27.2", features = ["svg", "image"] }
regex = "1.10.4"
bytemuck = "1.16.0"
comemo = "0.4.0"
image = "0.24.9"
tempfile = "3.10.1"
typst = "0.11.1"
typst-svg = "0.11.1"
typst-render = "0.11.1"
